--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,5 @@ services:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_URL: mongodb://mongo:27017/
+    command: ["node", "--unhandled-rejections=strict", "app.js"]
 
